# tedbuy

./: Development.md  README.md  pyproject.toml
.github/workflows/: build-and-publish.yaml
tedbuy/: buy.py
